# pkg-cef

./: .gitignore  CMakeLists.txt
debian/: .gitignore  README.Debian  changelog  control  copyright  libcef-dev.README.Debian  libcef-dev.install  libcef-dev.links  libcef.install  libcef87-data.install  libcef87-dev.install  libcef87-dev.links  libcef87.install  libcef87d.install  libcefd.install  rules
debian/patches/: do-cmake-install  fix-cfi-icall-attribute  series
